<resources>
    <string name="app_name">Who is the Guest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="form">Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="host_address">Host Address</string>
    <string name="host_name">Host Name</string>
    <string name="are_you_vaccinated">Are you vaccinated?</string>
    <string name="are_you_in_a_vehicle">Are you in a vehicle</string>
    <string name="please_enter_time_of_visit">Please enter time of visit</string>
    <string name="please_enter_your_details">Please Enter Your Details</string>
</resources>